Search Endpoint (#219)
* Add Elasticsearch dependency and tables for search histories and wiki data entities

* Save all related entities to database

* Implement search feature

* Remove unused code in WikiDataConfig.java

* Fix bug in PostService delete method
